==2013-11-05==
* Added example performance evaluation files in "testresources"

==2013-10-23==
Refined:
* LDCX_Performance_Evaluation_LogParse_Experiments.java - Parsing log files of olap4ld and retrieving
events for interesting metrics.
* LDCX_Performance_Evaluation_XmlaTest.java - Issuing workload for performance evaluation
* LDCX_User_Study_Evaluation_XmlaTest.java - Test Case for User Study queries.

==2013-10-20==
* More fine granular logging that can be parsed using regex as done in LDCX_Performance_Evaluation_XmlaTest_LogParse_Experiments.
* LDCX_Performance_Evaluation_XmlaTest with tests for performance evaluation
* LDCX_Performance_Evaluation_XmlaTest_LogParse_Experiments with experiment using exrunner by
Günter Ladwig for inserting log parser results into a sqlite dabase for querying and visualising
using gnuplot.
* Refined one of the example datasets (Eurostat).
* Added example for exrunner by Günter Ladwig: SortExperiments.java
* Exrunner requires (not uploaded)
** exrunner-0.0.1-SNAPSHOT.jar
** guava-15.0.jar
** sqlite-jdbc-3.7.15-SNAPSHOT-2.jar

==2013-10-3==
* Pooling problem workaround implemented: http://linked-data-cubes.org/index.php/Olap4j-xmlaserver#Problem:_Pooling_of_data_sources

==2013-10-1==
* Pooling problem investigated, see: http://linked-data-cubes.org/index.php/Olap4j-xmlaserver#Problem:_Pooling_of_data_sources

==2013-09-29==
* We now throw more OlapExceptions in Linked Data Engines (Sesame), since we hope that this
makes the system more robust in case of errors.
* A prepared olap statement is used by XmlaHandler.java 
(statement = connection.prepareOlapStatement(mdx);). Afterwards the cellset is 
created (cellSet = statement.executeQuery();). This means in our implementation, that the cellset
is populated twice and the linked data engine is queried twice (and logging is done, twice). Thus,
we have adapted cellset to only populate the cells when actually cells are asked for; otherwise, only