@@ -1,5 +1,6 @@
 ==2013-11-05==
 * Added example performance evaluation files in "testresources"
+* fixed error spelling of integrity check IC-8 of spec and continued working on slicer 
 
 ==2013-10-23==
 Refined:
